[gd_scene load_steps=2 format=2]

[ext_resource path="res://DialogueDynamic.gd" type="Script" id=1]

[node name="DialogueDynamic" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -30.9015
margin_right = 50.0
margin_bottom = 30.9015
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
rect_clip_content = true
text = "Dynamic"
align = 1
autowrap = true

[node name="Option1" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 38.0
size_flags_vertical = 4
text = "..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 100.0
margin_bottom = 62.0
size_flags_vertical = 4
text = "Goodbye"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="VBoxContainer/Option2" to="." method="_on_Option2_pressed"]
